config/manager/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bob-controller-manager
  namespace: bob-system
spec:
  selector:
    matchLabels:
      control-plane: controller-manager
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: controller-manager
        app: bob-api
    spec:
      serviceAccountName: bob-controller-manager
      containers:
        - name: manager
          image: controller:latest
          command:
            - /manager
          args:
            - --leader-elect
            - --api-bind-address=:8082
          ports:
            - name: api
              containerPort: 8082
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
