config/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bob-api
  namespace: bob-system
  labels:
    app: bob-api
spec:
  selector:
    control-plane: controller-manager
  ports:
    - name: api
      port: 8082
      targetPort: api
      protocol: TCP
