config/manager/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bob-api
  namespace: bob-system
  labels:
    app: bob-api
spec:
  to:
    kind: Service
    name: bob-api
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
